fixed first picture not showing in accordian multimediahome.hml

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20,9 +20,16 @@
 		text-align:center;
 	
 	
+	
 	}
 
+.description p
 
+{
+	text-align:justify !important;
+
+
+}
 	html 
 	
 		{
@@ -31,6 +38,8 @@
 	
 			
 		}
+
+
 	html p
 
 	{
